--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^7.0.0",
     "mongoose": "^9.1.4",
     "morgan": "~1.10.1",
+    "nodemailer": "^7.0.12",
     "zod": "^4.3.5"
   },
   "devDependencies": {
